--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -21,3 +21,4 @@
 @import "custom/components/sideBarUser";
 @import "custom/components/navLinks";
 @import "custom/components/userMenu";
+@import "custom/components/loader";
