--- a/src/assets/scss/custom/components/_navLinks.scss
+++ b/src/assets/scss/custom/components/_navLinks.scss
@@ -7,16 +7,6 @@
   }
 
   &__item {
-    text-decoration: none;
-    color: $main-font-color;
-    font-family: "Roboto", sans-serif;
-    font-size: 12px;
-    line-height: 14px;
-    font-weight: 500;
-    transition: color 0.2s ease;
-
-    &:hover {
-      color: tomato;
-    }
+    @extend %link-item;
   }
 }
