--- a/src/assets/scss/custom/helpers/_variables.scss
+++ b/src/assets/scss/custom/helpers/_variables.scss
@@ -12,3 +12,4 @@ $main-font-color: #000000;
 $main-inputs-color: #dfdfdf;
 $squere-color: #494949;
 $table-border-color: #9e9e9e;
+$main-hover-color: tomato;
