--- a/src/assets/scss/custom/structure/_header.scss
+++ b/src/assets/scss/custom/structure/_header.scss
@@ -20,11 +20,15 @@
     max-width: 200px;
     background-color: $main-inputs-color;
     border: none;
-    margin: 5px 48px 8px 0;
+    margin-top: 5px;
     border-radius: 8px;
     outline: none;
     padding: 8px 20px;
     transition: background-color 0.2s ease;
+    margin-bottom: 8px;
+    @media screen and (min-width: 48em) {
+      margin-bottom: 0;
+    }
 
     &:hover,
     &:focus {
